adding more pages to the docs

--- a/src/components/RightSidebar/MoreMenu.astro
+++ b/src/components/RightSidebar/MoreMenu.astro
@@ -9,7 +9,7 @@ type Props = {
 const { editHref } = Astro.props;
 ---
 
-<h2 class="heading">More</h2>
+<h2 class="heading">Want to help?</h2>
 <ul>
 	{
 		editHref && (
