--- a/src/components/RightSidebar/RightSidebar.astro
+++ b/src/components/RightSidebar/RightSidebar.astro
@@ -1,7 +1,7 @@
 ---
 import type { MarkdownHeading } from 'astro';
 import TableOfContents from './TableOfContents';
-import MoreMenu from './MoreMenu.astro';
+// import MoreMenu from './MoreMenu.astro';
 
 type Props = {
 	headings: MarkdownHeading[];
@@ -14,7 +14,7 @@ const { headings, githubEditUrl } = Astro.props;
 <nav class="sidebar-nav" aria-labelledby="grid-right">
 	<div class="sidebar-nav-inner">
 		<TableOfContents client:media="(min-width: 50em)" headings={headings} />
-		<MoreMenu editHref={githubEditUrl} />
+		<!-- <MoreMenu editHref={githubEditUrl} /> -->
 	</div>
 </nav>
 
