--- a/src/components/HeadCommon.astro
+++ b/src/components/HeadCommon.astro
@@ -10,7 +10,7 @@ import '../styles/index.css';
 
 <link rel="icon" type="image/svg+xml" href="https://github.com/GreedyKomodoDragon/Kontroler/raw/main/ui/public/logo.svg" />
 
-<link rel="sitemap" href="/sitemap.xml" />
+<link rel="sitemap" href="/sitemap-index.xml" />
 
 <!-- Preload Fonts -->
 <link rel="preconnect" href="https://fonts.googleapis.com" />
