--- a/src/components/HeadSEO.astro
+++ b/src/components/HeadSEO.astro
@@ -5,14 +5,23 @@ import { SITE, OPEN_GRAPH } from '../consts';
 type Props = { canonicalUrl: URL } & CollectionEntry<'docs'>['data'];
 
 const { ogLocale, image, description, canonicalUrl } = Astro.props;
-const formattedContentTitle = `${SITE.title}`;
+const formattedContentTitle = `${SITE.title} - Kubernetes Workflow Engine`;
 const imageSrc = image?.src ?? OPEN_GRAPH.image.src;
 const canonicalImageSrc = new URL(imageSrc, Astro.site);
 const imageAlt = image?.alt ?? OPEN_GRAPH.image.alt;
 ---
 
-<!-- Page Metadata -->
+<!-- Essential Meta Tags -->
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="robots" content="index, follow">
 <link rel="canonical" href={canonicalUrl} />
+
+<!-- Primary Meta Tags -->
+<title>{formattedContentTitle}</title>
+<meta name="title" content={formattedContentTitle}>
+<meta name="description" content={description ?? SITE.description} />
+<meta name="keywords" content="kubernetes, workflow engine, kontroler, container orchestration, cloud native, k8s" />
 
 <!-- OpenGraph Tags -->
 <meta property="og:title" content={formattedContentTitle} />
@@ -24,10 +33,14 @@ const imageAlt = image?.alt ?? OPEN_GRAPH.image.alt;
 <meta name="description" property="og:description" content={description ?? SITE.description} />
 <meta property="og:site_name" content={SITE.title} />
 
-<!-- Twitter Tags -->
-<!-- <meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:site" content={OPEN_GRAPH.twitter} />
-<meta name="twitter:title" content={formattedContentTitle} />
-<meta name="twitter:description" content={description ?? SITE.description} />
-<meta name="twitter:image" content={canonicalImageSrc} />
-<meta name="twitter:image:alt" content={imageAlt} /> -->
+<!-- Schema.org JSON-LD -->
+<script type="application/ld+json" set:html={JSON.stringify({
+  "@context": "https://schema.org",
+  "@type": "SoftwareApplication",
+  "name": SITE.title,
+  "description": description ?? SITE.description,
+  "applicationCategory": "DeveloperApplication",
+  "operatingSystem": "Kubernetes",
+  "url": canonicalUrl,
+  "image": canonicalImageSrc
+})} />
