updating image references

--- a/src/pages/blogs.astro
+++ b/src/pages/blogs.astro
@@ -22,7 +22,7 @@ const actualPosts = [
     publishDate: new Date("2025-03-08"),
     slug: "getting-started",
     image: {
-      src: "/public/deployment.png",
+      src: "https://raw.githubusercontent.com/GreedyKomodoDragon/kontroler-site/refs/heads/main/images/deployment.png",
       alt: "Kubernetes and Kontroler logos"
     }
   },
@@ -32,7 +32,7 @@ const actualPosts = [
     publishDate: new Date("2025-03-08"),
     slug: "advanced-patterns",
     image: {
-        src: "/public/advanced.jpg",
+        src: "https://raw.githubusercontent.com/GreedyKomodoDragon/kontroler-site/refs/heads/main/images/advanced.jpg",
       alt: "Complex workflow diagram"
     }
   },
@@ -42,7 +42,7 @@ const actualPosts = [
     publishDate: new Date("2025-03-08"),
     slug: "cronjob-comparison",
     image: {
-      src: "/public/vsbots.png",
+      src: "https://raw.githubusercontent.com/GreedyKomodoDragon/kontroler-site/refs/heads/main/images/vsbots.png",
       alt: "Comparison between Kontroler and Kubernetes scheduling"
     }
   }
