updating image extension

--- a/src/pages/blogs.astro
+++ b/src/pages/blogs.astro
@@ -22,7 +22,7 @@ const actualPosts = [
     publishDate: new Date("2025-03-17"),
     slug: "first-milestone",
     image: {
-      src: "https://raw.githubusercontent.com/GreedyKomodoDragon/kontroler-site/refs/heads/main/images/milestone.jpg",
+      src: "https://raw.githubusercontent.com/GreedyKomodoDragon/kontroler-site/refs/heads/main/images/milestone.png",
       alt: "GitHub stars milestone celebration"
     }
   },
