--- a/src/components/HeadSEO.astro
+++ b/src/components/HeadSEO.astro
@@ -2,10 +2,13 @@
 import type { CollectionEntry } from 'astro:content';
 import { SITE, OPEN_GRAPH } from '../consts';
 
-type Props = { canonicalUrl: URL } & CollectionEntry<'docs'>['data'];
+type Props = {
+  canonicalUrl: URL;
+  title?: string;
+} & CollectionEntry<'docs'>['data'];
 
-const { ogLocale, image, description, canonicalUrl } = Astro.props;
-const formattedContentTitle = `${SITE.title} - Kubernetes Workflow Engine`;
+const { ogLocale, image, description, canonicalUrl, title } = Astro.props;
+const formattedContentTitle = title ? `${title} | ${SITE.title}` : `${SITE.title} - Kubernetes Workflow Engine`;
 const imageSrc = image?.src ?? OPEN_GRAPH.image.src;
 const canonicalImageSrc = new URL(imageSrc, Astro.site);
 const imageAlt = image?.alt ?? OPEN_GRAPH.image.alt;
