further seo improvement attempts

--- a/src/pages/blogs/[slug].astro
+++ b/src/pages/blogs/[slug].astro
@@ -30,6 +30,8 @@ const currentPage = Astro.url.pathname;
       description={entry.data.description}
       canonicalUrl={canonicalURL}
       image={entry.data.image}
+      publishDate={entry.data.publishDate}
+      author={entry.data.author || "Kontroler Team"}
       lang="en-us"
       dir="ltr"
     />
